M spacing fixes

--- a/_assets/scss/layouts/_articles.scss
+++ b/_assets/scss/layouts/_articles.scss
@@ -86,6 +86,11 @@
       margin-bottom: $unit-3;
     }
   }
+
+  .article-content {
+    margin-bottom: $unit-3;
+    margin-top: -4px;
+  }
 }
 
 .article-images {
